????-??-?? Technology Preview 2
-------------------------------

Global :
  * Version handling in saved files.
  * Replaced old noise algorithm with Simplex Noise (up to 4 times faster).

Terrain :
  * Added canvases to paint the shape directly.
  * Shadows have been improved and are now configurable.

Textures :
  * New texture model (perpendicular displacement and thickness).
  * Textures ranges are now using curves.

Water :
  * Added foam.

Sky :
  * New sky model (based on Preetham's work).
  * Added sun halo control.

Clouds :
  * Added clouds hardness to light.
  * New cloud model with 2 noises : one for the global shape and one for edges.
  * Added clouds types with automatic settings.

Rendering :
  * Added full scene antialiasing (FSAA).

GUI :
  * Improved curve rendering.
  * New material editor.
  * Added render timer.
  * Previews locations and render params are now saved.
  * Added grid and axis labels to curve editor.
  * Added layer sorting and naming.
  * Automatic settings can be loaded from presets.

Previews :
  * Scaling is now logarithmic (slower when zoomed).
  * Drawing now takes advantage of multiple CPU cores.
  * Added camera location.
  * Added toggles and choices to configure some previews.

3D Explorer:
  * Added ground texture and skybox.
  * Progressive rendering now takes advantage of multiple CPU cores.

2012-04-20 Technology Preview 1
-------------------------------

First preview version :
  * Ground with simple texture layers
  * Water with waves, transparency and reflection
  * Sky with sun
  * Atmosphere with fog
  * Cloud 3d layers
  * Two-pass rendering
  * Form-based GUI, with real-time previews